--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,10 @@
-amqp==2.6.1
-appdirs==1.4.4
-certifi==2020.6.20
-chardet==3.0.4
 click==7.1.2
-cmake==3.18.2.post1
-distlib==0.3.1
-dlib==19.21.0
-dnspython==1.16.0
-eventlet==0.28.0
-face-recognition==1.3.0
-face-recognition-models==0.3.0
 fastapi==0.61.1
-filelock==3.0.12
-greenlet==0.4.17
-h11==0.9.0
-idna==2.10
-importlib-metadata==2.0.0
-install==1.3.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-kombu==4.6.11
-labelImg==1.8.3
-lxml==4.5.2
-MarkupSafe==1.1.1
-mock==4.0.2
-monotonic==1.5
-nameko==2.13.0
+gunicorn==20.0.4
+h11==0.11.0
 numpy==1.19.2
-opencv-python==4.4.0.44
-path==15.0.0
-path.py==12.5.0
-Pillow==7.2.0
 pydantic==1.6.1
-PyQt5==5.15.1
-PyQt5-sip==12.8.1
-PyYAML==5.3.1
-requests==2.24.0
-six==1.15.0
 starlette==0.13.6
-urllib3==1.25.10
-uvicorn==0.11.8
-vine==1.3.0
-virtualenv==20.0.35
-virtualenvwrapper-win==1.2.6
+uvicorn==0.12.2
+uvloop==0.14.0
 websockets==8.1
-Werkzeug==1.0.1
-wrapt==1.12.1
-zipp==3.3.0
